<resources>
    <string name="app_name">Fundatec Heroes TI21</string>
    <string name="what_your_name">Qual o seu nome?</string>
    <string name="digite_o_seu_nome">Digite o seu nome</string>
    <string name="hello">Oi, %s</string>
    <string name="clear">Limpar</string>
    <string name="ok">Ok</string>
    <string name="logo_fundatec">logo Escola Profissional Fundatec</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="logar">Login</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="login_error_message">Algum dos campos está incorreto</string>
    <string name="login_email_error_message">E-mail inválido</string>
    <string name="login_name_error_message">Nome inválido</string>
    <string name="login_password_error_message">Senha inválida</string>
    <string name="login_size_password_error_message">Tamanho de Senha inválido</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserirSenha">Inserir Senha</string>
    <string name="inserirEmail">Inserir E-mail</string>
    <string name="registrar">Registrar</string>
    <string name="Description">Description</string>
    <string name="DataNascimento">Data de Nascimento</string>
    <string name="idade">Idade</string>
    <string name="submit">submit</string>
    <string name="sucess">sucess</string>
    <string name="data">data</string>
    <string name="descricao">descrição</string>
    <string name="name">nome</string>
    <string name="insira_a_url_da_imagem">Insira a URL da imagem</string>
    <string name="register_name_error_message">Nome inválido</string>
    <string name="register_age_error_message">Idade inválida</string>
    <string name="register_birthdate_error_message">Data inválida</string>
    <string name="register_description_error_message">Descrição inválida, não pode estar vazia!</string>
    <string name="register_email_error_message">E-mail inválido</string>
    <string name="register_pdw_error_message">Senha inválida</string>
    <string name="new_character">novo personagem</string>
    <string name="image_error_message">Precisa ter URL para imagem</string>
    <string name="login_error2_message">erro</string>
    <string name="register_user_succes">usuario registrado com sucesso</string>
</resources>